# src/main/java/com/cgi/example/petstore/controller/PetStoreController.java
@@ -7,72 +7,86 @@ import com.cgi.example.petstore.logging.LogMethodResponse;
 import com.cgi.example.petstore.model.CustomerRequest;
 import com.cgi.example.petstore.model.MultiplePetsResponse;
 import com.cgi.example.petstore.model.NewPetRequest;
+import com.cgi.example.petstore.model.PetAvailabilityStatus;
+import com.cgi.example.petstore.model.PetDeletionResponse;
 import com.cgi.example.petstore.model.PetPatchRequest;
 import com.cgi.example.petstore.model.PetResponse;
-import com.cgi.example.petstore.model.PetStatus;
 import com.cgi.example.petstore.service.PetService;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
 public class PetStoreController implements PetStoreApi {
 
-    private final PetValidator petValidator;
-    private final PetService petService;
+  private final PetValidator petValidator;
+  private final PetService petService;
 
-    @Override
-    @LogMethodArguments
-    @LogMethodResponse
-    public ResponseEntity<PetResponse> addPet(NewPetRequest newPet) {
-        PetResponse addedPet = petService.addToPetStore(newPet);
+  @Override
+  @LogMethodArguments
+  @LogMethodResponse
+  public ResponseEntity<PetResponse> addPet(NewPetRequest newPet) {
+    PetResponse addedPet = petService.addToPetStore(newPet);
 
-        return ResponseEntity.ok(addedPet);
-    }
+    return ResponseEntity.ok(addedPet);
+  }
 
-    @Override
-    @LogMethodArguments
-    @LogMethodResponse
-    public ResponseEntity<MultiplePetsResponse> findPetsByStatus(List<PetStatus> statuses) {
-        List<PetResponse> pets = petService.retrieveAllPetsWithAStatusMatching(statuses);
+  @Override
+  @LogMethodArguments
+  @LogMethodResponse
+  public ResponseEntity<PetDeletionResponse> deletePetById(String petId) {
+    String message = petService.deletePetFromPetStore(petId);
 
-        MultiplePetsResponse petsResponse = new MultiplePetsResponse();
-        petsResponse.setPets(pets);
+    PetDeletionResponse petDeletionResponse = new PetDeletionResponse();
+    petDeletionResponse.setPetId(petId);
+    petDeletionResponse.setMessage(message);
 
-        return ResponseEntity.ok(petsResponse);
-    }
+    return ResponseEntity.ok(petDeletionResponse);
+  }
 
-    @Override
-    @LogMethodArguments
-    @LogMethodResponse
-    public ResponseEntity<PetResponse> getPetById(String petId) {
-        petValidator.validatePetId(petId);
+  @Override
+  @LogMethodArguments
+  @LogMethodResponse
+  public ResponseEntity<MultiplePetsResponse> findPetsByStatus(
+      List<PetAvailabilityStatus> statuses) {
+    List<PetResponse> pets = petService.retrieveAllPetsWithAStatusMatching(statuses);
 
-        PetResponse pet = petService.retrievePetDetails(petId);
+    MultiplePetsResponse petsResponse = new MultiplePetsResponse();
+    petsResponse.setPets(pets);
 
-        return ResponseEntity.ok().body(pet);
-    }
+    return ResponseEntity.ok(petsResponse);
+  }
 
-    @Override
-    @LogMethodArguments
-    @LogMethodResponse
-    public ResponseEntity<PetResponse> purchasePet(String petId, CustomerRequest customer) {
-        petValidator.validatePetId(petId);
+  @Override
+  @LogMethodArguments
+  @LogMethodResponse
+  public ResponseEntity<PetResponse> getPetById(String petId) {
+    petValidator.validatePetId(petId);
 
-        PetResponse purchasedPet = petService.purchase(petId, customer);
+    PetResponse pet = petService.retrievePetDetails(petId);
 
-        return ResponseEntity.ok().body(purchasedPet);
-    }
+    return ResponseEntity.ok().body(pet);
+  }
 
-    @Override
-    @LogMethodArguments
-    @LogMethodResponse
-    public ResponseEntity<PetResponse> patchPet(PetPatchRequest petPatch) {
-        PetResponse patchedPet = petService.patch(petPatch);
+  @Override
+  @LogMethodArguments
+  @LogMethodResponse
+  public ResponseEntity<PetResponse> purchasePet(String petId, CustomerRequest customer) {
+    petValidator.validatePetId(petId);
 
-        return ResponseEntity.ok().body(patchedPet);
-    }
+    PetResponse purchasedPet = petService.purchase(petId, customer);
+
+    return ResponseEntity.ok().body(purchasedPet);
+  }
+
+  @Override
+  @LogMethodArguments
+  @LogMethodResponse
+  public ResponseEntity<PetResponse> patchPet(PetPatchRequest petPatch) {
+    PetResponse patchedPet = petService.patch(petPatch);
+
+    return ResponseEntity.ok().body(patchedPet);
+  }
 }
